<resources>
    <string name="welcome">Bienvenue dans PictoAndroidChat !</string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="app_name">PictoAndroidChat</string>
    <string name="leave">Leave</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="eraser">Eraser</string>
    <string name="username_hint">Username</string>
    <string name="message_hint">Message</string>
    <string name="placeholder_sender_name">Sender</string>
    <string name="description_drawing">Sender drawing</string>
    <string name="placeholder_timestamp_mess">16:26</string>
    <string name="placeholder_text_mess">content message donc heureux</string>
</resources>