<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/canva"
        />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/canva"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_message"
        />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/message_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/eraser"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginBottom="13dp"
        android:text="@string/clear"
        />

    <ToggleButton
        android:id="@+id/eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button_clear"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintEnd_toStartOf="@id/button_send"
        android:text="@string/eraser"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_clear"
        app:layout_constraintStart_toEndOf="@id/eraser"
        android:text="@string/send"
        />



</androidx.constraintlayout.widget.ConstraintLayout>